# BDT_HW5_CICD

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test_github.yaml
HW5/: pyvenv.cfg
src/home_work_05/: random_machine.py
tests/: test_functions.py
