[project]
name = "home_work_05"
version = "0.1.0"
description = "Homework for CICD"
authors = [
    {name = "Baglan", email = "www.baglan888@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
